# VoyageAI

./: .editorconfig  .gitignore  .lintstagedrc.cjs  .prettierignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/api/: .env.example  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: health.py  planner.py
apps/api/app/core/: config.py
apps/api/app/schemas/: planner.py
apps/api/app/services/: planner_service.py
apps/web/: .env.example  .env.local.example  components.json  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/dashboard/: layout.tsx  loading.tsx  page.tsx
apps/web/src/app/design-system/: layout.tsx  page.tsx
apps/web/src/components/: ComponentPreview.tsx  index.ts
apps/web/src/components/dashboard/: budget-view.tsx  sidebar.tsx  (+3 more)
apps/web/src/data/: destinations.ts
apps/web/src/hooks/: use-destination-image.ts
apps/web/src/lib/: animations.ts  api.ts  format-currency.ts  tokens.ts
apps/web/src/theme/: theme-provider.tsx  theme-toggle.tsx
apps/web/src/types/: planner.ts
docker/: api.Dockerfile  web.Dockerfile
docs/: design-system.md
docs/database/: database-dictionary.md  erd.mmd
supabase/migrations/: 20260703_0001_phase1_core.sql  20260703_0002_phase1_travel.sql  20260703_0003_phase1_notifications_ai.sql  20260703_0004_phase1_storage.sql  20260706_0001_saved_destinations.sql
(+49 files in other folders)
