[build-system]
requires = ["setuptools>=74.0.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voyageai-api"
version = "0.1.0"
description = "FastAPI backend for VoyageAI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic-settings>=2.5.2,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
  "alembic>=1.13.3,<2.0.0",
  "httpx>=0.27.2,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0,<25.0.0",
  "mypy>=1.13.0,<2.0.0",
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.7.0,<1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
